# execdiff-git-ai

./: deprecate_checkod_ai.sh  setup_execdiff_extension.sh
ExecDiff/: pyproject.toml
ExecDiff/oss_test/: sample_app.py
blokbox_app/: main.py
bloksbox/: cli.py
bloksbox/backend/: main.py  requirements.txt
checkod-ai/: README.md  pyproject.toml
checkod-ai-vscode/: extension.ts  package.json  tsconfig.json
checkod-ai/checkod/: __init__.py  cli.py
checkod-test-repo/: README.md
execdiff-git-ai/: LICENSE  README.md  pyproject.toml  test_feature.py
execdiff-git-ai/execdiff_git_ai/: __init__.py  agent.py  cli.py
execdiff-git-ai/execdiff_git_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
execdiff-vscode/: LICENSE  README.md  execdiff-0.0.8.vsix  extension.js  package.json
execdiff_git_ai/: cli.py  pyproject.toml
