[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "checkod-ai"
version = "0.99.0"
description = "DEPRECATED: This package has been renamed to execdiff-git-ai. Please install execdiff-git-ai."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Anup Moncy", email = "n93181165@gmail.com" }
]
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3"
]

[project.scripts]
checkod = "checkod.cli:main"
