[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "execdiff-git-ai"
version = "1.0.3"
description = "AI Impact Assessment for git changes - understand what your AI copilot changed before you commit."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
	{ name = "Anup Moncy", email = "n93181165@gmail.com" }
]
requires-python = ">=3.8"
keywords = ["git", "ai", "copilot", "code-analysis", "diff", "impact-assessment"]
dependencies = [
    "requests>=2.25.0"
]

classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Software Development :: Version Control :: Git"
]

[project.urls]
"Homepage" = "https://github.com/anupmoncy/execdiff-git-ai"
"Bug Tracker" = "https://github.com/anupmoncy/execdiff-git-ai/issues"
"Documentation" = "https://github.com/anupmoncy/execdiff-git-ai#readme"

[project.scripts]
execdiff-git = "execdiff_git_ai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["execdiff_git_ai*"]
